src/objects/ffr__SummarizationSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>ERP Batch Settings</description>
    <fields>
        <fullName>ffr__Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chatter Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffr__Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffr__HideSummarizedDataNotification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Summarized Data Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffr__MassDeleteQueueableSize__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Queueable size - Mass Delete batch.</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__MassDeleteScopeSize__c</fullName>
        <defaultValue>2000</defaultValue>
        <label>Scope size - Mass Delete batch.</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__MaximumQueueSize__c</fullName>
        <label>Batch System Maximum Queue Size</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__NotificationObjectRecipients__c</fullName>
        <inlineHelpText>Separate email addresses using semicolons (;)  This field only applies to email and Chatter notifications. Users may not have tasks.</inlineHelpText>
        <label>Notification on objects</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ffr__SummarizationScopeSize__c</fullName>
        <defaultValue>200</defaultValue>
        <label>Scope size - summarization scope batch.</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task Notification</label>
        <type>Checkbox</type>
    </fields>
    <label>Batch Settings (ERP)</label>
</CustomObject>